--- a/index.html
+++ b/index.html
@@ -134,14 +134,6 @@
                 </ul>
             </nav>
             
-            <!-- CTA Minimalista -->
-            <div class="header-cta-minimal">
-                <a href="#orcamento" class="btn-minimal" title="Solicitar Orçamento">
-                    <i class="fas fa-calculator" aria-hidden="true"></i>
-                    <span>Orçamento</span>
-                </a>
-            </div>
-            
             <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false" aria-controls="navbar">
                 <div class="icon-bars">
                     <span></span>
@@ -178,36 +170,36 @@
                     <div> 
                         <div class="hero-slider">
                             <div class="hero-slide active">
-                                <h1>Wi-Fi gerenciado para <span>Empresas</span></h1>
-                                <p>Soluções de alta performance para escritórios, lojas e indústrias que necessitam de uma conexão estável e segura para suas operações diárias.</p>
+                                <h1>Infraestrutura Wi-Fi <span>Empresarial</span></h1>
+                                <p>Equipamentos Ubiquiti/UniFi de nível corporativo com gestão centralizada. Suporte para 500+ usuários simultâneos, VLANs segmentadas e monitoramento 24/7 em Blumenau e região.</p>
                             </div>
                             <div class="hero-slide">
-                                <h1>Wi-Fi gerenciado para <span>Eventos</span></h1>
-                                <p>Garanta conectividade de alta capacidade para shows, congressos e feiras. Ofereça uma experiência incrível para participantes e organizadores.</p>
+                                <h1>Wi-Fi para <span>Grandes Eventos</span></h1>
+                                <p>Infraestrutura temporária de alta densidade testada na Oktoberfest. Suporte para milhares de conexões simultâneas com setup completo em 48h e cobertura total do evento.</p>
                             </div>
                             <div class="hero-slide">
-                                <h1>Wi-Fi gerenciado para <span>Residências</span></h1>
-                                <p>Cobertura total e velocidade máxima para residências de alto padrão. Streaming em 4K, jogos online e home office sem interrupções.</p>
+                                <h1>Residencial <span>Premium</span></h1>
+                                <p>Tecnologia Wi-Fi 6 com mesh inteligente para casas de alto padrão. Cobertura uniforme em até 800m², ideal para smart homes, streaming 4K e home office profissional.</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="hero-static-content">
                         <a href="https://wa.me/554732883002?text=Olá!%20Gostaria%20de%20um%20orçamento." class="btn btn-primary hero-btn" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-whatsapp" aria-hidden="true"></i> Fale com um Especialista
+                            <i class="fas fa-calculator" aria-hidden="true"></i> Faça um Orçamento
                         </a>
                         <div class="hero-stats">
                             <div class="stat-card">
                                 <div class="number">99.9%</div>
-                                <div class="label">Uptime em Contrato</div>
+                                <div class="label">SLA Garantido</div>
                             </div>
                             <div class="stat-card">
-                                <div class="number">10+</div>
-                                <div class="label">Anos de Experiência</div>
+                                <div class="number">2000+</div>
+                                <div class="label">Usuários Atendidos</div>
                             </div>
                             <div class="stat-card">
-                                <div class="number">24/7</div>
-                                <div class="label">Suporte Especializado</div>
+                                <div class="number">48h</div>
+                                <div class="label">Deploy Completo</div>
                             </div>
                         </div>
                     </div>
@@ -229,23 +221,23 @@
             <div class="container">
                 <div class="section-title animate-on-scroll">
                     <h2>Por que escolher a <span>MC6?</span></h2>
-                    <p>Combinamos tecnologia de ponta com um serviço próximo e especializado.</p>
+                    <p>Expertise técnica comprovada e metodologia própria para infraestruturas de conectividade de alta performance.</p>
                 </div>
                 <div class="features-grid">
-                    <div class="feature-card animate-on-scroll tooltip" data-tooltip="Suporte local com técnicos em Blumenau e região">
-                        <div class="feature-icon"><i class="fas fa-headset"></i></div>
-                        <h3>Atendimento Regional</h3>
-                        <p>Somos de Blumenau e entendemos as necessidades das empresas de Santa Catarina, oferecendo um suporte rápido e próximo.</p>
+                    <div class="feature-card animate-on-scroll">
+                        <div class="feature-icon"><i class="fas fa-certificate"></i></div>
+                        <h3>Especialização Técnica</h3>
+                        <p>Certificados em arquiteturas Ubiquiti/UniFi com metodologia proprietária de site survey, design de RF e otimização de throughput para ambientes críticos.</p>
                     </div>
-                    <div class="feature-card animate-on-scroll tooltip" data-tooltip="Equipamentos Ubiquiti/UniFi com garantia internacional">
-                        <div class="feature-icon"><i class="fas fa-microchip"></i></div>
-                        <h3>Equipamentos de Ponta</h3>
-                        <p>Trabalhamos apenas com hardware de nível empresarial (Ubiquiti/UniFi) para garantir máxima performance e confiabilidade.</p>
+                    <div class="feature-card animate-on-scroll">
+                        <div class="feature-icon"><i class="fas fa-chart-line"></i></div>
+                        <h3>Monitoramento Proativo</h3>
+                        <p>NOC próprio com monitoramento em tempo real via UNMS/UniFi Controller. Detecção automática de anomalias e resolução preventiva antes do impacto operacional.</p>
                     </div>
-                    <div class="feature-card animate-on-scroll tooltip" data-tooltip="Análise detalhada do ambiente e dimensionamento personalizado">
-                        <div class="feature-icon"><i class="fas fa-tools"></i></div>
-                        <h3>Projetos Sob Medida</h3>
-                        <p>Cada cliente é único. Realizamos um estudo detalhado do seu ambiente para entregar uma solução perfeitamente adequada.</p>
+                    <div class="feature-card animate-on-scroll">
+                        <div class="feature-icon"><i class="fas fa-file-code"></i></div>
+                        <h3>Documentação Técnica</h3>
+                        <p>Entrega completa com diagrama de rede, configurações, senhas administrativas e treinamento da equipe interna para autonomia operacional.</p>
                     </div>
                 </div>
             </div>
