feat: implementa sistema de seções fullscreen v5.2.0
 Funcionalidades:
- Sistema de seções fullscreen com features ocupando 100vh
- Scroll-triggered animations com cards sequenciais
- Eliminação de lacunas visuais (tela preta) entre seções
- Navegação interna do botão hero para formulário de orçamento

 Correções:
- Bug tela preta hero  features
- Bug tela preta features  services
- Conflitos CSS duplicados removidos
- Z-index hierarchy implementado

 Melhorias:
- Animações staggered com delays otimizados
- Background gradient dinâmico na seção features
- Performance com requestAnimationFrame
- Debug logs para monitoramento

 Documentação:
- README.md atualizado com funcionalidades v5.2.0
- CHANGELOG_v5.2.0.md completo criado
- Guias de tecnologias e contribuição

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
 
                     <div class="hero-static-content">
-                        <a href="https://wa.me/554732883002?text=Olá!%20Gostaria%20de%20um%20orçamento." class="btn btn-primary hero-btn" target="_blank" rel="noopener noreferrer">
+                        <a href="#orcamento" class="btn btn-primary hero-btn">
                             <i class="fas fa-calculator" aria-hidden="true"></i> Faça um Orçamento
                         </a>
                         <div class="hero-stats">
@@ -226,16 +226,32 @@
                 <div class="features-grid">
                     <div class="feature-card animate-on-scroll">
                         <div class="feature-icon"><i class="fas fa-certificate"></i></div>
+                        <div class="feature-metrics">
+                            <span class="metric-badge">+500 Projetos</span>
+                            <span class="metric-badge">10+ Anos</span>
+                        </div>
                         <h3>Especialização Técnica</h3>
                         <p>Certificados em arquiteturas Ubiquiti/UniFi com metodologia proprietária de site survey, design de RF e otimização de throughput para ambientes críticos.</p>
                     </div>
-                    <div class="feature-card animate-on-scroll">
+                    <div class="feature-card animate-on-scroll featured-card">
+                        <div class="featured-badge">
+                            <i class="fas fa-star"></i>
+                            <span>Diferencial Único</span>
+                        </div>
                         <div class="feature-icon"><i class="fas fa-chart-line"></i></div>
+                        <div class="feature-metrics">
+                            <span class="metric-badge primary">NOC 24/7</span>
+                            <span class="metric-badge primary">99.9% SLA</span>
+                        </div>
                         <h3>Monitoramento Proativo</h3>
                         <p>NOC próprio com monitoramento em tempo real via UNMS/UniFi Controller. Detecção automática de anomalias e resolução preventiva antes do impacto operacional.</p>
                     </div>
                     <div class="feature-card animate-on-scroll">
                         <div class="feature-icon"><i class="fas fa-file-code"></i></div>
+                        <div class="feature-metrics">
+                            <span class="metric-badge">100% Entrega</span>
+                            <span class="metric-badge">Documentado</span>
+                        </div>
                         <h3>Documentação Técnica</h3>
                         <p>Entrega completa com diagrama de rede, configurações, senhas administrativas e treinamento da equipe interna para autonomia operacional.</p>
                     </div>
